src/components/Navbar/Navbar.css
.nav{
    position: sticky;
    top: 0;
    background: #ffff;
    transition: transform 0.6s ease;
    z-index: 2;
    width: 100%;
    height: 100px;
}
.hide{
    transform: translateY(-100%);
}
.navbar{
    display: flex;
    width: 90%;
    margin: auto;
}
.search-results p {
    display: flex;
    flex-direction: column;
  padding: 0px 15px;
  cursor: pointer;
}


.search-results img{
    width: 120px;
    border-radius: 20px;
}
.logo{
    height: 130px;
    width: 200px;
}
.search-bar .location{
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 2.2vw;
}
.location span{
    display: flex;
    align-items: center;
    gap: 3vw;
    font-size: 1.35vw;
    color: rgb(65, 64, 64);
}

.location img{
    opacity: 0.7;
}

.navbar .search-bar{
    display: flex;
    width: 53%;
    padding: 5px 0px;
    margin: auto;
    border: 1.7px solid black;
    border-radius: 50px;
    justify-content: space-around;
    align-items: center;
}

.search-button{
    cursor: pointer;
    opacity: 0.8;
}
.search-button:active{
    transform: scale(1.05);
}
.navbar .divider{
    width: 2px;
    height: 1.8vw;
    opacity: 0.5;
    background-color: black;
}

.input-text{
    display: flex;
    position: relative;
}
.search-bar{
    position: relative;
}
.search-results {
    display: flex;
    align-items: center;
  position: absolute;
  overflow-y: auto;
  z-index: 1;
  background: #ffff;
  width: 450px;
  max-height: 250px;
    scrollbar-width: "none";
  top: 200%;
  overflow-y: hidden;
  left: 0;
  border-radius: 10px;
  z-index: 1;
  box-shadow: 0 10px 10px rgba(0,0,0,0.1);

}

.input-text .input-search{
    display: flex;
    width: 20vw;
    border: none;
    outline: none;
    font-size: 1.13vw;

}
.navbar-right{
    width: 12%;
    display: flex;
    margin: auto;
    cursor: pointer;
    gap: 70px;
    align-items: center;
}
.navbar-basket-icon{
    position: relative;
    
}
.navbar-basket-icon:active{
    transform: scale(1.1);
}

.cart-badge {
  position: absolute;
  top: -10px;
  right: -11px;
  background: tomato;
  color: white;
  padding-top: 2px;
  padding-bottom: 2.5px;
  padding-left: 4.6px;
  padding-right: 4.8px;
  border-radius: 50%;
  font-size: 9px;
  font-family:'Times New Roman', Times, serif;
  font-weight: 600;
  text-align: center;
}
.navbar-right button{
    padding: 0.599vw 3.3vw;
    font-size: 1vw;
    border-radius: 50px;
    border-style: none;
    cursor: pointer;
    color: white;
    background: linear-gradient(to right,purple,tomato);
}
.location img{
    width: 30px;
    cursor: pointer;
}
.navbar-right button:active{
    opacity: 0.9;
    transform: scale(1.03);
}

@keyframes borderAnimation {
    0%{
        border-color: white;
    }
    25%{
        border-color: red;
    }
    50%{
        border-color: purple;
    }
    75%{
        border-color: tomato;
    }
    100%{
        border-color: black;
    }
}

@keyframes flow{
    0%{
        background-position: 0% 0%;

    }
    100%{
        background-position: 300% 0%;
    }
}

@media(max-width:750px){
}

